--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-Hello World
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Rock-Paper-Scissors by yzhang43</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Rock-Paper-Scissors</h1>
+        <p class="header"></p>
+
+
+
+        <ul>
+          <li><a class="buttons github" href="https://github.com/yzhang43">GitHub Profile</a></li>
+        </ul>
+
+      </header>
+      <section>
+        <h3>
+<a id="about-life" class="anchor" href="#about-life" aria-hidden="true"><span class="octicon octicon-link"></span></a>About life</h3>
+
+<p>Education is about learning to think. Life is about learning to stay calm.</p>
+
+<h3>
+<a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About me</h3>
+
+<p>Love new things, love different life styles, and love everything god gives me. Last but foremost, love my girlfriend.</p>
+      </section>
+      <footer>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+      </footer>
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
+  </body>
+</html>
