--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Rock-Paper-Scissors</h1>
+        <h1 class="header">Rock Paper Scissors</h1>
         <p class="header"></p>
 
 
